Fix choices overflow

--- a/projects/kypo-training-agenda/adaptive-definition-edit/src/components/phases/phase/questionnaire/question/rating-form-question/rating-form-question-edit.component.css
+++ b/projects/kypo-training-agenda/adaptive-definition-edit/src/components/phases/phase/questionnaire/question/rating-form-question/rating-form-question-edit.component.css
@@ -48,6 +48,7 @@
 .rating-form-choices {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .option-checkbox {
